base/static/base/css/uclib.scss
/* ... */
.space-computers { // computers available
  font-weight: 600;
  color: $reggreen;
  line-height: 3em;
}

.features-list {
  line-height: 2em;
  list-style: none;
}

.locations-list {
  border-bottom: 1px solid #b8aab1;
  &>div {
    padding: 0 1em 0 0;
  }
  img {
    margin-bottom: 1em;
  }
}

.btn-reserve {  //Reserve a room link
  color: #fff!important;
  letter-spacing: 0.1em;
  background-color: #58593F;
  border-right: 0px;
  margin: 5px 0 15px;
  padding: 5px 20px;
  &:before {
      color: #fff;
      content: "\f271";
      font-family: FontAwesome;
      font-size: 1.2em;
      line-height: 0.1em;
      margin-right: 0.5em;
    }
  &:hover {
      color: #fff;
      background-color: $active-hover;
  }
}

/*
 * Collections & Exhibits Listing
 * --------------------------------------------------
 */

 .btn-obvious {
  &:hover {
    background-color: $hovercalmlight;
  }
  &:focus {
    box-shadow: 0px 1px 5px $crerarblue;
    background-color: $hovercalmlight;
  }
 }

.listings-dropdown {
  margin-top: 0;
  background-color: $hovercalm;
  min-width: 200px;
  color: #000;
  border-radius: 0;
  &>ul>li>a {
    color: #262626;
    font-size: 1em;
    &:hover {
      color: $darkgray;
      text-decoration: none;
      background-color: $hovercalmlight;
    }
  }
}

.coll-dropdown {
  margin-bottom: 15px;
  @include respond-to(medium) {
    padding: 0px 14px 10px 14px;
  }
}

.coll-checkbox {
padding: 10px 0px 0px 15px;
  @include respond-to(small) {
    padding: 5px 10px 5px 10px;
  }
}

.btn-morecoll {
  @extend .btn-morelink;
  background: $hovercalm;
  border-color: #a0a282;
}

.btn-coll-link {
  font-size: 0.9em;
  background: transparent;
  border: 1px solid #a0a282;
  border-radius: 0;
  padding: 6px 12px;
  margin-bottom: 20px;
}

.coll-list {
  @extend .distinct-list;
  @include respond-to(small) {
    & img {
      max-width: 100px;
    }
    &>tbody>tr>td:nth-child(2) {
        padding-left: 15px;
    }
    &>tbody>tr>td:nth-child(3), &>tbody>tr>td:nth-child(4) {
        width: 25%;
    }
  }
}

.currentlist {
  background-color: $hovercalm;
  &:nth-of-type(odd) {
      background-color: $hovercalmlight!important;
  }
}

tr.seealso {
  background-color: #eeeeeb!important;
  td {
    font-style: italic;
  }
}

p.acknowledgments {
  font-style: italic;
  color: $mansuetogreen;
  font-size: 1.1em;
}

a.coll-access {
  &:after {
    content: "\0020\f101";
    font-family: FontAwesome;
  }
}

/*
 * Directory Listing
 * --------------------------------------------------
 */

 .directory-list {
  @extend .distinct-list;
  & img {
    max-width: 7em;
  }
  &>tbody>tr>td {
    &:nth-child(2) {
      padding-left: 15px;
    }
    @include respond-to(small) {
      &:nth-child(3), &:nth-child(4) {
        width: 25%;
      }
    }
    @include respond-to(smallonly) {
      padding-left: 15px;
    }
  }
 }

.guide-link {
  line-height:2.2em;
  &:before {
    content: "\f0f6";
    font-family: FontAwesome;
    font-size: 1em;
    margin-right: 0.5em;
  }
}

.list-view, .coll-limit { // "Switch to [...] view"
  padding: 5px 15px;
  @include respond-to(small) {
    text-align: right;
    padding: 5px 15px 10px 0;
  }
  a {
    color: $darkgray;
  }
}

.sdir {
  margin: 2em 0 0.25em 0;
  padding-left: 0;
  h2 {
    font-family: $accent-font;
    color: $reggreen;
    font-size: 1.3em;
    padding-left: 15px;
    margin-right: 2em;
    margin-bottom: 0.25em;
    border-bottom: 2px solid #ADB17D;
      a, a:active, a:focus, a:hover {
      color: $mid-dark;
      text-decoration: none;
    }
  }
  article {
    @extend .distinct-list;
    padding: 1em;
    display: grid;
    margin-right: -15px;
    margin-left: -15px;
    @include respond-to(small) {
      grid-template-columns: 1fr 1fr;
      grid-row-gap: 1em;
      grid-gap: 1.5em;
    }
    @include respond-to(medium) {
      grid-template-columns: 100px 3fr 2fr 2fr;
      grid-gap: 1.5em;
    }
    &:nth-child(odd) {
      background: #f6f6f6;
    }
    &+article {
      border-top: 1px solid #D2CDCC;
    }
    h3 {
      font-family: $base-font;
      font-size: 1.05em;
      margin-top: 0;
      margin-bottom: 0;
    }
    span[role=heading] {
      font-weight: 600;
      display: block;
      padding-top: 1em;
      @include respond-to(small) {
        padding-top: 0;
      }
    }
    .profile-image {
      padding-bottom: 1em;
      grid-row-start: 1;
      grid-column-start: 1;
      @include respond-to(small) {
        padding-bottom: 0;
      }
    }
    ul {
      padding-left: 0px;
      list-style: none;
    }
  }
}

.sdir-wrap {
  @extend .news-wrap;
  padding: 0;
  h3 {
    font-size: 1.1em;
    margin-bottom: 0;
  }
  a, a:active, a:focus, a:hover {
    color: $crerarblue;
    text-decoration: underline;
  }
  .col-xs-12 {
    padding-bottom: 1em;
    margin-top: 1em;
    @include respond-to(medium) {
      &:nth-child(3n+2) {
        border-right: 1px solid #eee;
        border-left: 1px solid #eee;
      }
    }
  }
}

/*
 * Staff Profile Page
 * --------------------------------------------------
 */

button[id^='mysched'] { // Springshare MyScheduler button styling for staff browse view
  color: #ffffff;
  background: #6e7337;
  margin-top: 0.5em;
  border: none;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  &:hover {
    color: #fff;
    background: #8a4a20;
  }
}


.staff-profile { //Staff Page, Photo
  @include respond-to(smallonly) {
    padding: 0 3em 1.2em 3em;
  }
}

body.staffpublicpage {
  h1 {
    border-bottom: none;
    display: inline-block;
  }
  .pronouns {
    color: $mid-dark;
    font-size: 0.95em;
    padding-bottom: 0.25em;
    padding-left: 0.25em;
  }
  h2.position-title {
    border-bottom: 1px solid #D6D6CE;
    margin-top: 0px;
    padding-bottom: 5px;
    font-weight: 400;
  }
}

.pronouns-listing {
  color: $mid-dark;
  display: block;
}
/* ... */

